CHANGELOG

2013-11-11: New vocabulary from qepHom'a' 2013, including new words from Star Trek Into Darkness and Klingon weekday names.

2013-10-21: Added "float" mode. This requires permission to "draw over other apps".
2013-10-20: Add README file. Add dependency on StandOut library.
2013-10-15: German entries for {'a}, {'e}, {'I}, {'o}, and {y}. Miscellaneous edits.

2013-09-23: German entries for {Q} and {m}.
2013-09-12: Added some song lyrics.

2013-09-06: Edits to notes and examples. Fix bug with display of the city name Saarbrücken.
2013-08-25: Added prefix charts. Revert Android support library to v4. Minor edits.

2013-08-21: Updated to latest Android support library.
2013-08-14: Added some common phrases. Minor edits.
2013-08-12: Add new word {jentu'}, clarify words {'aplo'} and {qoSta'}.

2013-08-06: Add links from menu to YouTube playlists. Upgrade to: android-18, ActionBarSherlock v4.4.0, android-menudrawer v3.0.4.

2013-08-05: Minor edits.
2013-07-30: Link to "Learn Klingon" Facebook group and KAG and KIDC message boards.
2013-07-24: UI revamp - {qep'a'} edition for tablets

2013-07-09, 2013-07-19: Minor edits and fixes to some entries.
2013-06-29: Minor edits. Added Saturn.

2013-06-08, 2013-06-13: Added new word for "scroll", edited various entries.

2013-05-12: Added entries from "How to Speak Klingon".

2013-04-25: Annotated {law'/puS} constructions, added more links to YouTube.
2013-04-07: Minor updates to transitivity data.

2013-03-20: Improved Twitter support.
2013-03-19: Added ability to receive shared text intent.

2013-03-07: Edited some entries.

2013-02-23: Minor edits to transitivity data and notes.

2013-02-08: Updated icons. Improved grammatically analysis of pronouns. Improvements to transitivity and German data.

2013-02-02: Minor updates to transitivity data.

2013-01-27: Added German entries up to {ngat}. Improved transitivity data for some entries.
